--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-/* Write your CSS code in this file */
-
 .container {
   width: 100%;
   max-width: 840px;
@@ -17,7 +15,7 @@
 }
 
 #headers {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #input-parent {
